--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
+  font-family: monospace;
   margin: auto;
   max-width: 38rem;
   padding: 2rem;
+  background-color: rgb(143, 36, 36);
+}
+.text{
+  background-color: whitesmoke;
+  border-radius: 10%;
+  padding: 5%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
